# NSamples

./: README.md
as-library-with-module/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  runcode.cmd
as-library-with-module/nau_project/: nau_project.cmake  nau_project.nauproject
as-library-with-module/nau_project/main_module/: CMakeLists.txt  module.cpp  myapi_impl.cpp  myapi_impl.h  pch.h
as-library-with-module/nau_project/main_module/public/: myapi.h
as-library-with-module/src/: main.cpp  pch.h
helpers/: env_vc.cmd  find_vc.cmd
